crates/sui-prover/tests/snapshots/ghost_borrow_mut/borrow_mut_get_fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with bytecode transformation errors
error: ghost use while borrow_mut: foo::GhostStruct
   ┌─ tests/inputs/ghost_borrow_mut/borrow_mut_get_fail.move:15:4
   │
15 │   *ghost::global<GhostStruct, bool>();
   │    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
